backends/drm: do cross-gpu imports again for test commits

Otherwise all commits will fail without a clear visible reason.

BUG: 454086